--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,7 @@ body{
     color:#fff;
     font-weight: 700;
     font-size: 18px;
+    text-transform: uppercase;
   }
   &__cross{
     font-size: 26px;
