--- a/css/main.css
+++ b/css/main.css
@@ -73,12 +73,28 @@ body {
 }
 
 .messenger__name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0;
   margin: 0;
   color: #fff;
   font-weight: 700;
   font-size: 18px;
   text-transform: uppercase;
+}
+
+.messenger__name::before {
+  display: block;
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-right: 10px;
+  content: "";
 }
 
 .messenger__cross {
