--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,12 +55,23 @@ body{
     margin-right: 10px;
   }
   &__name{
+    display: flex;
+    align-items: center;
     padding:0;
     margin:0;
     color:#fff;
     font-weight: 700;
     font-size: 18px;
     text-transform: uppercase;
+    &::before{
+      display: block;
+      width: 10px;
+      height: 10px;
+      background-color: #fff;
+      border-radius: 50%;
+      margin-right: 10px;
+      content: "";
+    }
   }
   &__cross{
     font-size: 26px;
