--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,6 +209,7 @@ body{
       color:rgb(74, 114, 190);
       font-weight: 700;
       font-size: 18px;
+      text-transform: uppercase;
       background-color: transparent;
       border: none;
       cursor: pointer;
