--- a/scss/main.scss
+++ b/scss/main.scss
@@ -116,6 +116,7 @@ body{
     color:#ccc;
     font-size: 14px;
     font-weight: 700;
+    text-transform: uppercase;
   }
   &__chat{
     list-style-type: none;
